--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mobx": "^6.13.6",
     "mobx-persist-store": "^1.1.5",
     "mobx-react": "^9.2.0",
+    "moment": "^2.30.1",
     "path": "^0.12.7",
     "querystringify": "^2.2.0",
     "react": "^19.0.0",
