--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.0.12"
+    "tailwindcss": "^4.0.12",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
