--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "useDefineForClassFields": true,
     "paths": {
       "src/*": [
