--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@tailwindcss/vite": "^4.0.12",
+    "@turf/turf": "^7.2.0",
     "antd": "^5.24.3",
     "axios": "^1.8.2",
     "classnames": "^2.5.1",
