--- a/package.json
+++ b/package.json
@@ -32,13 +32,18 @@
     "react": "^19.0.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^19.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.12",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "vite-plugin-babel": "^1.3.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.25.9",
+    "@babel/preset-typescript": "^7.27.0",
     "@eslint/js": "^9.21.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/leaflet": "^1.9.16",
