feat: routing in map

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdi/react": "^1.6.1",
     "@tailwindcss/vite": "^4.0.12",
     "@turf/turf": "^7.2.0",
+    "@types/leaflet-routing-machine": "^3.2.8",
     "antd": "^5.24.3",
     "axios": "^1.8.2",
     "classnames": "^2.5.1",
@@ -23,6 +24,7 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "icomoon-react": "^3.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "mobx": "^6.13.6",
     "mobx-persist-store": "^1.1.5",
     "mobx-react": "^9.2.0",
