--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.2",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.12",
     "tslib": "^2.8.1",
     "vite-plugin-babel": "^1.3.0"
