--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@tailwindcss/vite": "^4.0.12",
@@ -37,6 +39,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.2.0",
+    "react-textarea-autosize": "^8.5.9",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.2",
     "socket.io-client": "^4.8.1",
