--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "editor.codeActionsOnSave": {
-        "source.organizeImports": "explicit"
+        "source.organizeImports": "explicit",
+        "source.fixAll.eslint": "explicit"
     },
     "typescript.updateImportsOnFileMove.enabled": "always",
     "CodeGPT.apiKey": "CodeGPT Plus Beta"
