--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "antd": "^5.24.3",
     "axios": "^1.8.2",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "debounce": "^2.2.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "icomoon-react": "^3.0.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
+    "lodash": "^4.17.21",
     "mobx": "^6.13.6",
     "mobx-persist-store": "^1.1.5",
     "mobx-react": "^9.2.0",
